Imported Upstream version 1.0.0

--- a/configure.ac
+++ b/configure.ac
@@ -22,9 +22,9 @@
 
 dnl - if not 1, append datestamp to the version number.
 m4_define([pad_released], [1])
-m4_define([pad_major_version], [0])
-m4_define([pad_minor_version], [1])
-m4_define([pad_micro_version], [2])
+m4_define([pad_major_version], [1])
+m4_define([pad_minor_version], [0])
+m4_define([pad_micro_version], [0])
 m4_define(pad_maybe_datestamp,
     m4_esyscmd([if test x]pad_released[ != x1; then date +.%Y%m%d | tr -d '\n\r'; fi]))
 
@@ -78,9 +78,36 @@ PKG_CHECK_MODULES(GLIB2, [
     glib-2.0 >= 2.8
 ])
 
-PKG_CHECK_MODULES(GTK2, [
-    gtk+-2.0
-])
+dnl - check gtk
+AC_ARG_WITH([gtk],
+    [AS_HELP_STRING([--with-gtk=2.0|3.0],
+                    [Select GTK+ version. The default is 2.0])],
+    [case "$with_gtk" in
+        2.0|3.0) ;;
+        *) AC_MSG_ERROR([invalid gtk version specified]) ;;
+     esac],
+    [with_gtk=2.0]
+)
+
+case "$with_gtk" in
+    2.0)
+        PKG_CHECK_MODULES(GTK2, [
+            gtk+-2.0
+        ])
+        AM_CONDITIONAL(HAVE_GTK3, false)
+        AM_CONDITIONAL(HAVE_GTK2, true)
+        GTK_API_VERSION=2.0
+        ;;
+    3.0)
+        PKG_CHECK_MODULES(GTK3, [
+            gtk+-3.0
+        ])
+        AM_CONDITIONAL(HAVE_GTK3, true)
+        AM_CONDITIONAL(HAVE_GTK2, false)
+        GTK_API_VERSION=3.0
+    ;;
+esac
+AC_SUBST(GTK_API_VERSION)
 
 PKG_CHECK_MODULES(LIBXML2, [
     libxml-2.0 >= 2.0
@@ -203,3 +230,15 @@ pyinput-pad/pyinput_pad.pth
 ])
 
 AC_OUTPUT
+echo "
+                input-pad version pad_version
+
+
+libinput_pad version:    $libinput_pad_VERSION
+GTK+ version:            $GTK_API_VERSION
+Have libxklavier:        $have_libxklavier
+Enable EEK               $enable_eek
+Enable Python            $enable_python
+Enable XTEST             $enable_xtest
+lt version info          $LT_VERSION_INFO
+"
