--- a/pyinput-pad/Makefile.am
+++ b/pyinput-pad/Makefile.am
@@ -55,12 +55,10 @@ nodist__input_pad_la_SOURCES = \
 
 _input_pad_la_CFLAGS = \
 	$(PYTHON_CFLAGS)                                        \
-	$(GTK2_CFLAGS)                                          \
 	$(NULL)
 
 _input_pad_la_LDFLAGS = \
 	$(PYTHON_LIBS)                                          \
-	$(GTK2_LIBS)                                            \
 	-avoid-version                                          \
 	-module                                                 \
 	$(NULL)
@@ -68,6 +66,14 @@ _input_pad_la_LDFLAGS = \
 _input_pad_la_LIBADD = \
 	$(top_builddir)/input-pad/libinput-pad.la               \
 	$(NULL)
+
+if HAVE_GTK3
+    _input_pad_la_CFLAGS += $(GTK3_CFLAGS)
+    _input_pad_la_LDFLAGS += $(GTK3_LIBS)
+else
+    _input_pad_la_CFLAGS += $(GTK2_CFLAGS)
+    _input_pad_la_LDFLAGS += $(GTK2_LIBS)
+endif
 
 _input_pad_group_la_SOURCES = \
 	$(NULL)
@@ -99,12 +105,10 @@ nodist__input_pad_window_gtk_la_SOURCES = \
 
 _input_pad_window_gtk_la_CFLAGS = \
 	$(PYTHON_CFLAGS)                                        \
-	$(GTK2_CFLAGS)                                          \
 	$(NULL)
 
 _input_pad_window_gtk_la_LDFLAGS = \
 	$(PYTHON_LIBS)                                          \
-	$(GTK2_LIBS)                                            \
 	-avoid-version                                          \
 	-module                                                 \
 	$(NULL)
@@ -112,6 +116,14 @@ _input_pad_window_gtk_la_LDFLAGS = \
 _input_pad_window_gtk_la_LIBADD = \
 	$(top_builddir)/input-pad/libinput-pad.la               \
 	$(NULL)
+
+if HAVE_GTK3
+    _input_pad_window_gtk_la_CFLAGS += $(GTK3_CFLAGS)
+    _input_pad_window_gtk_la_LDFLAGS += $(GTK3_LIBS)
+else
+    _input_pad_window_gtk_la_CFLAGS += $(GTK2_CFLAGS)
+    _input_pad_window_gtk_la_LDFLAGS += $(GTK2_LIBS)
+endif
 
 %.py %_wrap.c: %.i
 	@f=`basename "$<"`;                                     \
