--- a/input-pad.pc.in
+++ b/input-pad.pc.in
@@ -8,6 +8,6 @@ xkeysenddir=@libdir@/input-pad-@libinput_pad_VERSION@/modules/xkeysend
 Name: input-pad
 Description: Input Pad
 Version: @VERSION@
-Requires: glib-2.0 gtk+-2.0
+Requires: glib-2.0 gtk+-@GTK_API_VERSION@
 Cflags: -I${includedir}
 Libs: -L${libdir} -linput-pad
