--- a/data/str.xml.in
+++ b/data/str.xml.in
@@ -831,6 +831,10 @@
           <comment>In My Opinion</comment>
         </string>
         <string>
+          <label>LGTM</label>
+          <comment>Looks Good To Me</comment>
+        </string>
+        <string>
           <label>lol</label>
           <comment>Laugh Out Loud</comment>
         </string>
